cmake_minimum_required(VERSION 3.6)
project(CaffeProject)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
include_directories("/home/jaken/caffe/include")
include_directories("/usr/local/cuda/include")
include_directories(SYSTEM ${Boost_INCLUDE_DIR})
include_directories("/home/jaken/caffe/.build_release/src")
link_directories("/home/jaken/caffe/build/lib")
#ADD_DEFINITIONS(-DCPU_ONLY)
set(SOURCE_FILES src/main.cpp src/uestc_classifier.cpp include/uestc_classifier.h include/default.hpp include/server_http.hpp include/special.hpp include/json.hpp)
add_executable(CaffeProject ${SOURCE_FILES})
target_link_libraries(CaffeProject caffe)
target_link_libraries(CaffeProject glog)
target_link_libraries(CaffeProject boost_system)
target_link_libraries(CaffeProject protobuf)
target_link_libraries(CaffeProject ${OpenCV_LIBS})
target_link_libraries(CaffeProject pthread)
target_link_libraries(CaffeProject boost_thread)
target_link_libraries(CaffeProject boost_filesystem)
target_link_libraries(CaffeProject boost_date_time)
target_link_libraries(CaffeProject boost_regex)